tomcat config for IdP